src/test/ui/issues/issue-48364.stderr
error[E0308]: mismatched types
  --> $DIR/issue-48364.rs:2:21
   |
LL |     b"".starts_with(stringify!(foo))
   |                     ^^^^^^^^^^^^^^^ expected slice `[u8]`, found `str`
   |
   = note: expected reference `&[u8]`
              found reference `&'static str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
